# infinity-ai

./: CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  init.sh  main.py  pyproject.toml  requirements.txt  setup.py
docs/: architecture.md  getting-started.md
examples/: demo.sh
examples/todo-app/: requirements.txt
infinity_ai/: __init__.py  cli.py
infinity_ai/config/: __init__.py  llm_config.py  settings.py
infinity_ai/core/: __init__.py  coding_agent.py  feature_manager.py  initializer.py  progress_tracker.py  scheduler.py
infinity_ai/utils/: __init__.py  browser_tester.py  file_manager.py  git_utils.py  logger.py
tests/: __init__.py  conftest.py
